Version 0.30.2 (2022-02-05)
- Add last_update to every value_cache_entry
- Rename init_entity_value to load_entity_value
- move (un)ignore methods to device

Version 0.30.1 (2022-02-04)
- Start hub earlier

Version 0.30.0 (2022-02-03)
- Add paramset to entity
- Add CHANNEL_OPERATION_MODE for HmIP(W)-DRBL4
- Fix DLD lock_state
- Add is_jammed to locks

Version 0.29.2 (2022-02-02)
- Add support for blacklisting a custom entity
- Add HmIP-STH to climate custom entities

Version 0.29.1 (2022-02-02)
- Check if interface callback is alive
- Add class for HomeamaticIP Blinds

Version 0.29.0 (2022-02-01)
- Make device availability dependent on the client
- Fire event about interface availability

Version 0.28.7 (2022-01-30)
- Add additional check to reconnect

Version 0.28.6 (2022-01-30)
- Optimize get_value caching

Version 0.28.5 (2022-01-30)
- Extend device cache to use get_value

Version 0.28.4 (2022-01-30)
- Limit read proxy workers to 1

Version 0.28.3 (2022-01-29)
- Rename RawDevicesCache to DeviceDescriptionCache

Version 0.28.2 (2022-01-29)
- Make names cache non persistent
- Bump pydevccu to 0.1.2

Version 0.28.1 (2022-01-28)
- Update hub.py to match GenericEntity
- Cleanup central API
- Use dedicated proxy for mass read operations, to avoid blocking of connection checker

Version 0.28.0 (2022-01-27)
- Try create client after init failure
- Reduce CCU calls

Version 0.27.2 (2022-01-25)
- Optimize data_load

Version 0.27.1 (2022-01-25)
- Fix naming paramset -> paramset_description pt2
- Optimize data_load by using get_paramset

Version 0.27.0 (2022-01-25)
- Fix naming paramset -> paramset_description
- Add get_value and get_paramset to central
- Add hmcli.py as command line script

Version 0.26.0 (2022-01-22)
- Make whitelist for parameter depend on the device_type/sub_type
- Add additional params for HM-SEC-Win (DIRECTION, ERROR, WORKING, STATUS)
- Add additional params for HM-SEC-Key (DIRECTION, ERROR)
- Assign secondary channels for HM dimmers