@@ -17,3 +17,6 @@
 build
 hahm/unignore
 tests/hahm/unignore
+tests/hahm/unignore
+hahm/unignore
+hahm/unignore
