@@ -1,0 +1,2 @@
+INHIBIT
+ACTUAL_TEMPERATURE
