@@ -117,7 +117,6 @@ IGNORED_PARAMETERS = [
     "FROST_PROTECTION",
     "HUMIDITY_LIMITER",
     "INCLUSION_UNSUPPORTED_DEVICE",
-    "INHIBIT",
     "INSTALL_MODE",
     "LEVEL_COMBINED",
     "LEVEL_REAL",
